[tool.poetry]
name = "chemprot-biocreative"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.16.2"
torch = "^1.10.2"
sklearn = "^0.0"
sentence-transformers = "^2.2.0"
nltk = "^3.7"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
